<resources>
    <string name="app_name">HABBA 2018</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_college">Enter your College</string>
    <string name="college_name">College Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="gender">Gender</string>
    <string name="enter_your_designation">Enter your Designation</string>
    <string name="Name">Name</string>
    <string name="Usn">Usn</string>
    <string name="Phone">Phone</string>
    <string name="Suggestion">Suggestions</string>
    <string name="Describe">Describe yourself in a sentence</string>
    <string name="College">Select College</string>
    <string name="Exp">Past Experience(1 to 5)</string>
    <string name="Branch">Select Branch</string>
    <string name="Year">Select Year</string>
    <string name="APL">APL REGISTRATION</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Student">Student</string>
    <string name="Faculty">Faculty</string>
    <string name="Others">Others</string>
    <string name="Select_Department">Select Department</string>
    <string name="Category">Enter your Category</string>
    <string name="Batsman">Batsman</string>
    <string name="Bowler">Bowler</string>
    <string name="All">All-Rounder</string>
    <string name="reg">Register</string>
    <string name="Vol">VOLUNTEER REGISTRATION</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_usn">Enter your USN</string>
    <string name="enter_your_date_of_birth">Enter your Date of Birth(DD-MM-YYYY)</string>
</resources>
