<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:orientation="vertical"
                android:scrollbarAlwaysDrawVerticalTrack="true"
    android:backgroundTint="#FFFFFFFF"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/login_title"
            android:elevation="4dp"
            android:layout_marginTop="0dp"
            android:paddingTop="30dp"
            android:paddingBottom="50dp"
            android:orientation="vertical"
            >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="VOLUNTEER REGISTRATION"
                        android:textSize="20dp"
                        android:textColor="#8BA5FC"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:text="@string/enter_your_name" />
                    <EditText
                            android:id="@+id/Name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:textColor="@drawable/edittextdrawable"

                            />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_your_email" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/editTextEmail"
                        android:textColor= "@drawable/edittextdrawable"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_usn" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:errorEnabled="true"
                    >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/Usn"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:drawableTint="#FF4081"
                            android:hint="@string/Usn"
                            android:inputType="text"
                            android:singleLine="true"

                    />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/College"/>

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Branch"/>

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Year"/>
                   <RadioGroup
                        android:id="@+id/rgyear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1.0">

                       <RadioButton
                           android:id="@+id/rb1"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_weight="0.2"
                           android:checked="true"
                           android:text="1" />
                            <RadioButton
                                android:id="@+id/rb2"
                                android:text="2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.2"/>
                            <RadioButton
                                android:id="@+id/rb3"
                                android:text="3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.2"/>
                            <RadioButton
                                android:id="@+id/rb4"
                                android:text="4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.2"/>
                            <RadioButton
                                android:id="@+id/rb5"
                                android:text="5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.2"/>



                    </RadioGroup>

                  <!--  <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/yearspinner"/> -->

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:errorEnabled="true"
                      >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/Describe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/Describe"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Fields of Interest" />
                        <CheckBox
                            android:id="@+id/one"
                            android:text="Content Writing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:id="@+id/two"
                            android:text="Design and Art Work"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:id="@+id/three"
                            android:text="Photography"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:id="@+id/four"
                            android:text="Sports"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:id="@+id/five"
                            android:text="Marketing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:id="@+id/six"
                            android:text="Media Handling"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <CheckBox
                            android:id="@+id/seven"
                            android:text="Defence"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:errorEnabled="true"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/Phone"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawableTint="#FF4081"
                            android:hint="@string/Phone"
                            android:inputType="number"
                            android:singleLine="true"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Exp" />

                    <RadioGroup
                        android:id="@+id/rgexp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1.0">
                        <!--<LinearLayout-->
                        <!--android:orientation="horizontal"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:weightSum="1.0">-->

                        <RadioButton
                            android:id="@+id/rbe1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:checked="true"
                            android:text="0" />

                        <RadioButton
                            android:id="@+id/rbe2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="1" />

                        <RadioButton
                            android:id="@+id/rbe3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="2" />

                        <RadioButton
                            android:id="@+id/rbe4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="3" />

                        <RadioButton
                            android:id="@+id/rbe5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.2"
                            android:text="4" />


                    </RadioGroup>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:errorEnabled="true"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/Skills"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Current Skills"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:errorEnabled="true"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/Suggestion"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawableTint="#FF4081"
                            android:hint="@string/Suggestion"
                            android:inputType="text"
                            android:singleLine="true"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/ButtonRegister"
                        android:text="Register"
                        android:textColor="#ffffff"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/_18sp"
                        android:background="@drawable/buttonshape"
                        android:shadowRadius="5"
                        android:layout_height="match_parent"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>